[project]
name = "2025-p1-jrusso03"
version = "0.1.0"
description = ""
authors = [
    {name = "Jordan Russo",email = "jordan.russo@student.uq.edu.au"}
]
readme = "README.md"
requires-python = "^3.9"
dependencies = [
    "flask (>=3.1.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
